<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Demo</string>
    <string name="isnetwork">未连接到网络，请检查网络设置</string>
    <string name="weibosdk_demo_has_installed_weibo">\u0009已安装</string>
    <string name="weibosdk_demo_has_not_installed_weibo">\u0009未安装</string>
    <string name="weibosdk_demo_cancel_download_weibo">\u0009取消下载</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="not_hit_data">暂时无历史数据</string>
    <string name="not_collection_data">暂时无收藏数据</string>
    <string name="not_download_data">暂时无下载数据</string>
    <string name="not_login">你还未登录，不能查看收藏数据</string>
    <string name="success">成功</string>
    <string name="fail">网络连接错误，请重试</string>
    <string name="wifi_tips">WIFI提示</string>
    <string name="advice_open_wifi">当前使用3G/4G网络，建议在wifi环境下下载漫画</string>
    <string name="entered_home">取消下载</string>
    <string name="soon_setup">继续下载</string>
    <string name="app_name_apk">轻漫画-看漫画书</string>
    <string name="comic">漫屋</string>
    <string name="bookshelf">书架</string>
    <string name="type">分类</string>
    <string name="me">me</string>
    <string name="search_tips">搜索作品名、作者名</string>
    <string name="delete">删除</string>
    <string name="check_all">全选</string>
    <string name="out_manage">退出管理</string>
    <string name="all_delete_book">确定删除选中的文件吗?</string>
    <string name="readlly_delete">确定</string>
    <string name="continued_read">继续阅读</string>
    <string name="login_reg">登录/注册</string>
    <string name="search_hit">搜索历史</string>
    <string name="clean_search_hit">清除搜索历史</string>
    <string name="replace">换一换</string>
    <string name="search_hot">热门搜索</string>
    <string name="search_fail">"抱歉，未找到相关漫画 
我们将尽快收录更多的漫画"</string>
    <string name="marvellous_comic">先看看以下精彩漫画吧</string>
    <string name="hit_search">搜索作品名.作者名</string>
    <string name="setup">设置</string>
    <string name="feedback">意见反馈</string>
    <string name="my_message">我的消息</string>
    <string name="contact_us">联系我们</string>
    <string name="game_center">轻游戏</string>
    <string name="about">软件介绍</string>
    <string name="about_app">关于</string>
    <string name="toscore">去评分</string>
    <string name="check_update">检查更新</string>
    <string name="no_have_book">当前没有作品可以选择!</string>
    <string name="east2d">东方二次元 版权所有</string>
    <string name="statement">使用条款和隐私政策</string>
    <string name="current_version">当前版本:</string>
    <string name="submit">提交</string>
    <string name="input_opinion">欢迎大家对我们的轻漫画提出意见</string>
    <string name="contact_way">请输入QQ号，以便我们联系你</string>
    <string name="input_not">输入不能为空</string>
    <string name="thank_user_feedback">谢谢您的建议，我们会接纳您宝贵的意见</string>
    <string name="act">账号</string>
    <string name="input_act_style">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.@_</string>
    <string name="change_password_one">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="reg">注册</string>
    <string name="other_login">直接登录</string>
    <string name="copy_board">已复制至剪切板</string>
    <string name="input_moble_email">请输入常用邮箱或手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="confirm_reg">确定注册</string>
    <string name="back_login">返回登录</string>
    <string name="no_agreement">未同意使用协议，无法注册哦</string>
    <string name="protocol">使用协议</string>
    <string name="raccountnut">账号不能为空</string>
    <string name="passwordnut">密码不能为空</string>
    <string name="formaterror">输入格式错误,请入正确的邮箱或手机号码</string>
    <string name="raccounttoolittle">账号不能少于11个字符</string>
    <string name="passwordtoolittle">密码不能少于6个字符</string>
    <string name="raccountexist">账号已存在</string>
    <string name="raccountnoexist">账号不存在</string>
    <string name="inputpsderror">密码不正确</string>
    <string name="regsuccess">注册成功</string>
    <string name="loginsuccess">登录成功</string>
    <string name="welcome">小伙伴来吐个槽吧(ˇˍˇ)</string>
    <string name="send">发送</string>
    <string name="max140">最多不能超过140个字</string>
    <string name="qm_usergroup">轻漫画用户QQ群</string>
    <string name="qm_usergroup_msg">287650236</string>
    <string name="qm_fansgroup">轻漫画粉丝QQ群</string>
    <string name="qm_fansgroup_msg">470625091</string>
    <string name="weibo">微博</string>
    <string name="click_on">点击关注</string>
    <string name="qq_public_num">QQ公众号</string>
    <string name="head">头像</string>
    <string name="nickname">昵称</string>
    <string name="profile">简介</string>
    <string name="weixin">微信</string>
    <string name="email">邮箱</string>
    <string name="city">城市</string>
    <string name="sex">性别</string>
    <string name="mobile">手机</string>
    <string name="qq">QQ公众号</string>
    <string name="qq_user">QQ</string>
    <string name="change_userinfo">编辑个人信息</string>
    <string name="delete_comment">评论已删除</string>
    <string name="hint_no_input">未填写</string>
    <string name="trac_king_table">一周追番表</string>
    <string name="search_tag">"对\"&lt;font color='#71c6d5'> %1$s &lt;/font>\"的搜索结果如下:"</string>
    <string name="top_list_pic">专题合集</string>
    <string name="clear_caches">清除缓存</string>
    <string name="quick_read">快捷阅读滚动</string>
    <string name="update_password">修改密码</string>
    <string name="exit_login">退出登录</string>
    <string name="only_wifi_netWork">仅WIFI联网</string>
    <string name="login_err">登录失败</string>
    <string name="login_ok">登录成功</string>
    <string name="change_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="hua">话</string>
    <string name="very_new">最新</string>
    <string name="minute">详细</string>
    <string name="reg_err">注册失败</string>
    <string name="reg_ok">注册成功</string>
    <string name="check_is_quick">开启快捷</string>
    <string name="check_no_quick">关闭快捷</string>
    <string name="check_is_wifi">仅WIFI联网</string>
    <string name="check_no_wifi">WIFI不联网</string>
    <string name="history">历史</string>
    <string name="sub">收藏</string>
    <string name="hint_nickname">请输入昵称</string>
    <string name="hint_desc">请输入个性签名</string>
    <string name="hint_city">请输入所在城市</string>
    <string name="hint_qq">请输入QQ号</string>
    <string name="hint_weixin">请输入微信号</string>
    <string name="hint_weibo">请输入微博号</string>
    <string name="hint_email">请输入邮箱号</string>
    <string name="hint_phonenum">请输入手机号</string>
    <string name="desc_maxlong">签名不能超过500个字符</string>
    <string name="nickname_maxlong">昵称不能超过20位</string>
    <string name="mobile_maxlong">手机号输入错误</string>
    <string name="weixin_maxlong">微信不能超过20位</string>
    <string name="qq_maxlong">qq不能超过15位</string>
    <string name="weibo_maxlong">微博不能超过20位</string>
    <string name="email_maxlong">邮箱不能超过40位</string>
    <string name="city_maxlong">所在地不能超过50位</string>
    <string name="nickname_minlong">昵称不能少于2位</string>
    <string name="chneg_head_ok">修改头像成功</string>
    <string name="chneg_head_failed">修改头像失败</string>
    <string name="phone_format_error">手机号格式错误</string>
    <string name="email_format_error">邮箱格式错误</string>
    <string name="change_desc_ok">签名修改成功</string>
    <string name="change_nickname_ok">昵称修改成功</string>
    <string name="change_mobile_ok">手机号修改成功</string>
    <string name="change_weixin_ok">微信修改成功</string>
    <string name="change_weibo_ok">微博修改成功</string>
    <string name="change_email_ok">邮箱修改成功</string>
    <string name="change_qq_ok">QQ修改成功</string>
    <string name="change_city_ok">城市修改成功</string>
    <string name="clear_cache_data">清理缓存</string>
    <string name="version_update">版本更新</string>
    <string name="discuss_later">以后再说</string>
    <string name="soon_update">立即更新</string>
    <string name="cancel">取消</string>
    <string name="current_update">正在更新</string>
    <string name="now_new_comic">已经是最新版本</string>
    <string name="now_versions">当前版本:</string>
    <string name="pwd_err">密码错误</string>
    <string name="user">个人中心</string>
    <string name="change_pwd_err">修改密码错误</string>
    <string name="album">从相册中选择</string>
    <string name="camera">相机</string>
    <string name="updateto">更新至</string>
    <string name="reply">回复</string>
    <string name="click_like_ok">点赞成功</string>
    <string name="already_click_like">已点赞</string>
    <string name="anthology">选集</string>
    <string name="batch_download">批量下载</string>
    <string name="download">下载</string>
    <string name="start_chapters">起始章节</string>
    <string name="input_download_chapters">输入需要下载的章节</string>
    <string name="over_chapters">结束章节</string>
    <string name="to">至</string>
    <string name="downloading">该话正在下载中. . .</string>
    <string name="phone_available_size">手机可用空间</string>
    <string name="current_needs">当前需要</string>
    <string name="clean_phone_memory">请先清理手机内存！</string>
    <string name="choose_down_words">请选择要下载的话数</string>
    <string name="backstage_down">正在为您后台下载中</string>
    <string name="input_down_words">请输入要下载的话数</string>
    <string name="start_than_min">起始章节大于0</string>
    <string name="over_than_sum">结束章节大于总章节</string>
    <string name="start_no_than_over">起始章节不能大于结束章节</string>
    <string name="check_delete_his">请选择需要删除的历史记录</string>
    <string name="check_delete_sub">请选择需要删除的收藏记录</string>
    <string name="check_delete_orderidx">请选择需要删除的话</string>
    <string name="check_delete_down">请选择需要删除的下载</string>
    <string name="sub_ok">收藏成功</string>
    <string name="cancel_sub">取消收藏</string>
    <string name="article">第</string>
    <string name="words">话</string>
    <string name="copy_ok">链接已复制到剪切板</string>
    <string name="no_comment">暂无评论</string>
    <string name="share">分享</string>
    <string name="update_password_success">修改密码成功,请重新登录</string>
    <string name="update_password_error">修改密码错误</string>
    <string name="tips_password">新密码不能少于6位</string>
    <string name="comfrim_password">请确认密码</string>
    <string name="comfrim_password_tips">两次输入密码不一致</string>
    <string name="reload">重新加载</string>
    <string name="connect_last">客官莫急，正在加载</string>
    <string name="connect_mobile_change">当前为数据流量状态，建议在WIFI下欣赏</string>
    <string name="ydqgame_get_giving">您已领取 独家礼包</string>
    <string name="ydqgame_convert">兑换码：</string>
    <string name="ydqgame_please">请在游戏中使用</string>
    <string name="ydqgame_copy">点击复制</string>
    <string name="ydq_play_num">"&lt;font color='#ff9500'> %1$s &lt;/font>跑友正在玩!"</string>
    <string name="ydq_people">个</string>
    <string name="ydq_game_tips">游戏即将上线</string>
    <string name="ydq_game_expect">敬请期待</string>
    <string name="recommend">推荐</string>
    <string name="rank">排行</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
