<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/comic">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/relative_input">

        <ImageView
            android:id="@+id/iv_app_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="15dp"
            android:background="@drawable/login_appicon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <EditText
            android:id="@+id/et_act_reg"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/login_edit"
            android:digits="@string/input_act_style"
            android:drawableLeft="@drawable/act_tips_icon"
            android:hint="@string/input_moble_email"
            android:maxLength="25"
            android:singleLine="true"
            android:textColor="#ff000000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_pwd_reg"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/et_act_reg"
            android:layout_marginTop="24dp"
            android:background="@drawable/login_edit"
            android:digits="@string/change_password_one"
            android:drawableLeft="@drawable/pwd_tips_icon"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:maxLength="25"
            android:singleLine="true"
            android:textColor="#ff000000"
            android:textSize="14.0sp" />

        <RelativeLayout
            android:id="@+id/relative_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_below="@id/et_pwd_reg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <CheckBox
                android:id="@+id/checkbox"
                style="@style/MyCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="13dp"
                android:checked="true"
                android:textColor="#ff4d4d4d"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_pact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkbox"
                android:layout_centerVertical="true"
                android:layout_marginLeft="45dp"
                android:text="同意《使用协议》"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative_checkbox"
            android:layout_marginTop="24dp">

            <Button
                android:id="@id/btn_reg"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/tv_text"
                android:background="@drawable/login_btn"
                android:text="@string/confirm_reg"
                android:textColor="@color/white" />

            <TextView
                android:id="@id/tv_text"
                android:layout_width="20dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:background="@null" />

            <Button
                android:id="@+id/btn_back_login"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/tv_text"
                android:background="@drawable/login_edit"
                android:text="@string/back_login"
                android:textColor="@color/list_desc" />
        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:id="@id/iv_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="15dp"
        android:clickable="true"
        android:onClick="clickBack"
        android:src="@drawable/back_icon" />
</RelativeLayout>